SSDM 0.1.9024 Dimitri Justeau: Enable host and port option when launching the gui
              README
SSDM 0.1.9023 tmmpath in stack_modelling()
              split with '.Ensemble.SDM' instead of '.' in save, plot, and gui
SSDM 0.1.9022 ESDM list in plot.model bug fixed
SSDM 0.1.9021 CRAN second submit changes
SSDM 0.1.9020 CRAN first submit changes
SSDM 0.1.9019 Occurrences man url corrected
              Check -as--cran
              Check on CRAN win-build
SSDM 0.1.9018 save tab in gui debug for ESDM @Jay
SSDM 0.1.9017 tmppath in ensemble_modelling dir creation @Jay
              tmp doc in ensemble_ and stack_modelling @FD
SSDM 0.1.9016 Weighted endemism index major change : range definition
              load_occ major beug fixed, wrong rows were removed
              tmppath change in ensemble and stack_modelling (overwrite of path var issue) @FD
              raster::readAll to force loading Env in memory (load_var) @FD
              Raster[Raster[]<=-900]=NA instead of reclassify @FD
              Resample with more condition to avoid extra computing @FD
              Add timestampt to ensemble_modelling @FD
SSDM 0.1.9015 n.cores parameter in GBM auto-adapted to parallel computing in stack_modelling
              gc() added at the end of each modelling function to avoid memory loss
              ensemble.AlgoSDM() weight corrected
              .cran-comment in .Rbuildignore
              shinyFiles in Suggests and checked when gui() is used
              Check with 0 Notes 0 Warnings 0 Errors
SSDM 0.1.9014 Parallel computing with parallel::parLapply
              .csv in save_model @DJ
              Species in ./Species in save_stack @DJ
              Stack results in ./Stack in save_stack @DJ
              Pearson cor = NA or NULL in evaluate.axis
SSDM 0.1.9013 Parallel computing: for loop correctly removed
              load_var tested
SSDM 0.1.9012 Parallel computing for stack_modelling with parallel::mclapply